IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2/15/09: Fixed problem with getting max coordinates in Point2model.

2/7/09: Fixed bug in Splitcorrection for Windows and made chunk sizes as near
equal as possible.

2/2/09: Sychronize all on/off buttons when meshing turns an object on.

1/26/09: IMOD_3-13-1
1/26/09: Fixed right-click popup menu on Final Aligned Stack panel.

1/26/09: Fixed eTomo reporting of error messages from Ctfplotter.

1/23/09: Fixed size of current point sphere in model view if data loaded with
binning.

1/21/09: Matchshifts makes sure solve.xf is readable by owner to solve problem
on Vista when files appear to have no permissions to cygwin.

1/21/09: Made Findbeads3d set mean of correlation reference to zero, needed
for valid correlations.

1/16/09: Fixed runimodqtapp for spaces in IMOD_DIR.

1/15/09: Stopped beadfixer from deleting current contour when deleting ones
below threshold.

1/12/09: Fixed problem of Midas starting up with cosine stretch on.

1/11/09: Made object list window get updated for model or view change even
when object edit window not open.

1/7/09: Added option to imodmop to paint tubes only in planes.

1/6/09: Fixed model view display problem on some Macs caused by stereo 
changes by swapping buffers twice more after the draw.

1/2/09: Made a script for imodhelp to run it properly.

12/29/08: Fixed Stitchalign to avoid multiple vectors at same Z level and put
out only one layer of vectors if input edges have only one layer.

12/29/08: Made Findwarp give an appropriate error when discounting zero vectors
leaves no fits; adjusted ratio of measured/unknowns if one layer in Z.

12/22/08: Fixed imod2patch and patch2imod command wrappers so edgepatches will
run in Windows.

12/18/08: Changed isosurface color again, changed object names and scaled down 
new color when saving an isosurface.

12/17/08: IMOD_4-0-0 and branch to IMOD_3-13-0